# dynamodb-helper

./: Cargo.toml  LICENSE  README.md
.github/workflows/: github-deploy.yml
dynamodb-helper/: Cargo.toml  README.md
dynamodb-helper/src/: lib.rs
dynamodb-helper/src/impl/: constants.rs  errors.rs  methods.rs  mod.rs  traits.rs  util.rs
dynamodb-helper/src/implementation/: constants.rs  dynamo_types.rs  methods.rs  mod.rs  traits.rs  util.rs
dynamodb-helper/src/util/: constants.rs  errors.rs  methods.rs  mod.rs  traits.rs  util.rs
src/: main.rs
tests/: helper_tests.rs  modification_tests.rs  retrieval_tests.rs  table_tests.rs  util.rs
tests/fails/: error_for_enum.rs  error_for_enum.stderr  error_for_invalid_list.rs  error_for_invalid_list.stderr  error_for_invalid_partition_key.rs  error_for_invalid_partition_key.stderr  error_for_missing_partition_key.rs  error_for_missing_partition_key.stderr
