[package]
name = "dynamodb-helper"
version = "0.1.0"
edition = "2021"
description = "Macro that creates a struct for interacting with AWS DynamoDB"
license = "MIT"
homepage = "https://github.com/VanOvermeire/dynamodb-helper"
repository = "https://github.com/VanOvermeire/dynamodb-helper"
readme = "README.md"
keywords = ["DynamoDB", "macro"]

[dependencies]
proc-macro2 = "1.0.46"
quote = "1.0.20"
syn = { version = "1.0.98", features = ["extra-traits"]}
aws-sdk-dynamodb = "0.17.0"

[lib]
proc-macro = true
