[package]
name = "dynamodb-helper"
version = "0.2.1"
edition = "2021"
description = "Macro that creates a struct for interacting with AWS DynamoDB"
license = "MIT"
homepage = "https://github.com/VanOvermeire/dynamodb-helper"
repository = "https://github.com/VanOvermeire/dynamodb-helper"
readme = "README.md"
keywords = ["DynamoDB", "macro"]

[dependencies]
proc-macro2 = "1.0.95"
quote = "1.0.40"
syn = { version = "2.0.104", features = ["extra-traits"]}
aws-sdk-dynamodb = "1.82.0"

[lib]
proc-macro = true
